fix acceptance tests for route closures